Changed /stocks/:symbol api-endpoint. Modified also swagger and removed AMZN from supported dsymbols
